--- a/Develop/style.css
+++ b/Develop/style.css
@@ -88,6 +88,12 @@ header {
   cursor: pointer;
 }
 
+section.card-inputs{
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight:bold;
+}
+
 button[disabled] {
   cursor: default;
   background: #c0c7cf;
